# supabase-test

./: README.md  package-lock.json
db-models/: pyproject.toml
db-models/src/db_models/: __init__.py  base.py  user.py
db-models/tests/: test_user.py
python-app/: main.py  pyproject.toml
supabase/: config.toml
supabase/migrations/: 20251106005247_alter_users.sql  20251106005532_add_user_age.sql  20251106011552_change_user_table_name.sql
supabase/schemas/: user.sql  users.sql
supabase/seeds/: user.sql  users.sql
