[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "db-models",
]

[tool.uv.sources]
db-models = { workspace = true }
